<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_DPJ" Id="{4b3b5582-07f7-49ad-8e49-b2b9fa041fe6}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_DPJ :
STRUCT
	///configuration
	Cfg: T_Ctrl_SIf_DPJ_Cfg;
	///parameter
	Par: T_Ctrl_SIf_DPJ_Par;
	///current values
	Cur: T_Ctrl_SIf_DPJ_Cur;
	///io input
	In: T_Ctrl_SIf_DPJ_In;
	///io output
	///Data Channel from Line Controller to PLC
	DtChnToPLC: T_Ctrl_SIf_DPJ_DtChnToPLC;
	///Data Channel from PLC to Line Controller
	DtChnToLine: T_Ctrl_SIf_DPJ_DtChnToLine;
	///alarm number used in this controller
	Alm: ARRAY[1..13] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>