<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_DPJ_DtChnToLine" Id="{076cb314-6030-4a23-8909-79f408f866c8}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_DPJ_DtChnToLine :
STRUCT
	stJobDone: T_JobDone_DtChn;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>