<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_JobDone_DtChn" Id="{cd978b1e-e527-4113-a410-0859723bf780}">
    <Declaration><![CDATA[TYPE T_JobDone_DtChn :
STRUCT
	stDecision: T_Decision;
	strTimestamp: STRING(24);
	intDataState: INT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>